# VLM_Surveillance

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  vlm_log.db  windows_requirements.txt
