[project]
name = "vlm-surveillance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "streamlit>=1.48.1",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]
